fix flex container gap

--- a/styles/components/Container/Flex.module.sass
+++ b/styles/components/Container/Flex.module.sass
@@ -2,4 +2,4 @@
   display: flex
   flex-flow: column
   align-items: center
-  gap: 24px
+  gap: 6px
